@@ -29,6 +29,7 @@ Guillaume Vincent
 Hatem Nassrat
 J. Fernando Sánchez
 Jack Shedd
+James Thompson
 Jeff Triplett
 John Bazik
 Jonas Aule
