@@ -121,6 +121,8 @@ Supported Providers
 
 - Mail.Ru (OAuth2)
 
+- Windows Live (OAuth2)
+
 - OpenId
 
 - Paypal (OAuth2)
@@ -854,6 +856,17 @@ App registration (get your key and secret here)
         https://www.linkedin.com/secure/developer?newapp=
 Development callback URL
         Leave the OAuth redirect URL empty.
+
+
+Windows Live
+------------
+
+The Windows Live provider currently does not use any settings in
+`SOCIALACCOUNT_PROVIDERS`.
+
+App registration (get your key and secret here)
+        https://account.live.com/developers/applications/index
+
 
 OpenID
 ------
