@@ -1,3 +1,7 @@
+2014-07-05  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* James Thompson contributed Windows Live support, thanks!
+
 2014-06-16  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.17.0 released.
